--- a/parcel-app/package.json
+++ b/parcel-app/package.json
@@ -17,12 +17,14 @@
     "autoprefixer": "^10.4.13",
     "parcel": "^2.8.3",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
     "process": "^0.11.10",
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0"
+    "react-router-dom": "^6.8.0",
+    "react-toastify": "^9.1.1"
   }
 }
