--- a/parcel-app/package.json
+++ b/parcel-app/package.json
@@ -22,6 +22,8 @@
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
+    "email-validator": "^2.0.4",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
