--- a/parcel-app/package.json
+++ b/parcel-app/package.json
@@ -22,10 +22,17 @@
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.9",
+    "@heroicons/react": "^2.0.14",
+    "@tanstack/react-query": "^4.24.4",
+    "@types/luxon": "^3.2.0",
+    "clipboard-copy": "^4.0.1",
     "email-validator": "^2.0.4",
     "formik": "^2.2.9",
+    "luxon": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.8.0",
     "react-toastify": "^9.1.1"
   }
