--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "dotenv": "^10.0.0",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "valid-url": "^1.0.9"
   },
   "mocha": {
     "timeout": 10000000
