--- a/parcel-app/package.json
+++ b/parcel-app/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.9",
     "@heroicons/react": "^2.0.14",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.24.4",
     "@types/luxon": "^3.2.0",
     "clipboard-copy": "^4.0.1",
