--- a/parcel-app/package.json
+++ b/parcel-app/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.8.0",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "valid-url": "^1.0.9"
   }
 }
